# rust-libre-storage

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  rocket.toml
migrations/2020-03-21-180843_create_users/: up.sql
migrations/2020-03-22-143925_create_filesystem/: down.sql  up.sql
src/: app_state.rs  auth.rs  crypto.rs  lib_http.rs  main.rs  providers.rs  routes.rs  schema.patch  schema.rs  utils.rs
src-frontend/: index.html
src-frontend/app/: entry.js
src-frontend/styles/: base.css
src/models/: mod.rs  user.rs  user_info.rs
src/providers/: lib.rs  mod.rs  prelude.rs  users.rs
src/routes/: auth.rs  mod.rs  webdav.rs
src/routes/guards/: mod.rs  prelude.rs  tests.rs  users_provider.rs  webdav_auth.rs
src/routes/guards/prelude/: mod.rs  webdav_auth.rs
src/utils/: basic_auth.rs  mod.rs  tests.rs  webdav_auth.rs
