[package]
name = "rust-libre-storage"
version = "0.1.0"
authors = ["Anton Prilepsky"]
edition = "2018"
description = "Free file share platform"
license = "GNU AGPLv3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.4.2", features = ["sqlite"] }
dotenv = "0.10"