[package]
name = "rust-libre-storage"
version = "0.1.0"
authors = ["Anton Prilepsky"]
edition = "2018"
description = "Free file share platform"
license = "GNU AGPLv3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
rocket_contrib = { version = "0.4", features = ["json","serve"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.4", features = ["sqlite", "chrono"] }
chrono = "0.4"
dotenv = "0.10"
pbkdf2 = "0.3"
base64 = "0.12"
rand = "0.7"
hmac = "0.7"
sha2 = "0.8"